# task-manager

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: .env.template
docker/: Dockerfile
kubernetes/: api-deployment.yaml  api-migrations.yaml  api-service.yaml  app-config.yaml  app-secrets.yaml  postgres-service.yaml  postgres-statefulset.yaml
src/: main.py
src/application/task/: task_service.py
src/domain/task/: entity.py  exception.py  value_object.py
src/infra/: config.py  observability.py
src/infra/db/: connection.py
src/infra/db/migrations/: env.py
src/infra/db/migrations/versions/: 9cf910b0ae25_.py
src/infra/db/models/: task.py
src/infra/db/repositories/: task_repositories.py
src/presentation/: errors.py
src/presentation/web_api/dependencies/: depends_stub.py
src/presentation/web_api/endpoints/: task.py
src/presentation/web_api/providers/abstract/: db.py  task.py
src/presentation/web_api/schemas/: task.py
tests/: conftest.py
tests/alembic/: conftest.py
tests/functional/api/: test_tasks.py
tests/integration/repositories/: test_task_repository.py
tests/unit/application/: test_task_service.py
tests/unit/domain/: test_exceptions.py  test_task_entity.py
